Fixed front page cards layout on mobile

--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -320,13 +320,15 @@ figcaption {
   left: 0;
   width: 500px;
   height: 350px;
-  padding: 0 !important;
+  // padding: 0 !important;
+  padding: 15px;
   box-shadow: 0 5px 20px 0 rgba(0,0,0,0.2);
   overflow: hidden;
   border: $border-width $border-color solid;
   opacity: 1;
   transition: visible 0s linear 0.3s;
   color: $white;
+  background-color: $white;
   @include respond-below(sm) {
     position: relative !important;
     width: 100vw;
@@ -364,7 +366,10 @@ figcaption {
   }
 
   figure {
-    position: relative;
+    position: absolute;
+    margin: -15px;
+    top: 15px;
+    left: 15px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -443,9 +448,8 @@ figcaption {
     background-color: $white;
     width: 800px;
     height: 500px;
-
     p {
-      margin: 30px;
+      // margin: 30px;
       width: 70%;
     }
     ul {
@@ -471,11 +475,15 @@ figcaption {
         padding-right: 15px;
       }
     }
+    @include respond-below(sm) {
+      max-width: 100vw;
+      font-size: 2.8rem;
+    }
   }
 
   &.publications-card {
     @extend .weight-4;
-    padding: 30px !important;
+    // padding: 30px !important;
     background-color: white;
     color: $black;
     height: 70vh;
@@ -506,7 +514,9 @@ figcaption {
         }
       }
     }
-
+    @include respond-below(sm) {
+      z-index: 98;
+    }
   }
 }
 
